--- a/client/package.json
+++ b/client/package.json
@@ -14,9 +14,9 @@
     "daisyui": "^2.42.1",
     "mdb-react-ui-kit": "^5.0.0",
     "moment": "^2.27.0",
-    "react": "^16.13.1",
+    "react": "^18.2.0",
     "react-chartjs-2": "^2.9.0",
-    "react-dom": "^16.13.1",
+    "react-dom": "^18.2.0",
     "react-moment": "^0.9.7",
     "react-preloaders": "^3.0.3",
     "react-query": "^3.39.2",
@@ -49,6 +49,8 @@
     ]
   },
   "devDependencies": {
+    "@types/react": "^18.0.25",
+    "@types/react-dom": "^18.0.9",
     "tailwindcss": "^3.0.24"
   },
   "proxy": "http://localhost:5000"
