--- a/package.json
+++ b/package.json
@@ -34,6 +34,8 @@
     "validator": "^13.1.1"
   },
   "devDependencies": {
+    "@types/react": "^18.0.25",
+    "@types/react-dom": "^18.0.9",
     "concurrently": "^5.2.0",
     "nodemon": "^2.0.4"
   }
