--- a/client/package.json
+++ b/client/package.json
@@ -22,7 +22,7 @@
     "react-query": "^3.39.2",
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "3.4.1",
+    "react-scripts": "^3.4.1",
     "redux-devtools-extension": "^2.13.8",
     "redux-thunk": "^2.3.0",
     "uuid": "^8.2.0"
@@ -49,8 +49,6 @@
     ]
   },
   "devDependencies": {
-    "@types/react": "^18.0.25",
-    "@types/react-dom": "^18.0.9",
     "tailwindcss": "^3.0.24"
   },
   "proxy": "http://localhost:5000"
